# Mobile-Security-Framework-MobSF

./: .checkignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pyup.yml  .sonarcloud.properties  .travis.yml  AGENTS.md  ANDROID_IMPROVEMENTS.md  CHANGELOG.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-Backend  Dockerfile-UI  Dockerfile.postgres  MANIFEST.in  Pipfile  README.md  README_zh.md  RUN_INSTRUCTIONS.md  SECURITY.md  Saafta.sh  TODO.nd  _config.yml  automated_analysis.sh  background_tasks.bat  bypass_java.js  bypass_native.js  changelog.md  clean.sh  contributing.json  db.sqlite3  device_connector.py  docker-compose  docker-compose.yml  docker-compose_swarm.yml  (+34 more)
.github/: CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  SECURITY.md  (+5 more)
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/: BUILD.gn  PRESUBMIT.py  cloud_storage  json_format  update_docs  validate_binary_dependencies
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/docs/: run_benchmarks_locally.md
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/docs/pydoc/: telemetry.android.html  telemetry.android.shared_android_state.html  telemetry.benchmark_runner.html  telemetry.core.discover.html  telemetry.core.memory_cache_http_server.html  telemetry.decorators.html  telemetry.internal.actions.media_action.html  telemetry.internal.actions.mouse_click.html  telemetry.internal.actions.navigate.html  telemetry.internal.actions.page_action.html  telemetry.internal.actions.pinch.html  telemetry.internal.actions.repaint_continuously.html  telemetry.internal.actions.scroll.html  telemetry.internal.actions.swipe.html  telemetry.internal.actions.wait.html  telemetry.internal.app.android_app.html  telemetry.internal.app.android_process.html  telemetry.internal.backends.android_app_backend.html  telemetry.internal.backends.android_command_line_backend.html  telemetry.internal.backends.app_backend.html  telemetry.internal.backends.browser_backend.html  telemetry.internal.backends.chrome.cros_browser_with_oobe.html  telemetry.internal.backends.chrome.desktop_browser_finder.html  telemetry.internal.backends.chrome.ios_browser_backend.html  telemetry.internal.backends.chrome_inspector.inspector_page.html  telemetry.internal.backends.form_based_credentials_backend.html  telemetry.internal.backends.form_based_credentials_backend_unittest_base.html  telemetry.internal.backends.mandoline.android_mandoline_backend.html  telemetry.internal.backends.mandoline.android_mandoline_finder.html  telemetry.internal.backends.mandoline.config.html  telemetry.internal.backends.mandoline.desktop_mandoline_finder.html  telemetry.internal.backends.mandoline.mandoline_browser_backend.html  telemetry.internal.browser.browser_options.html  telemetry.internal.browser.extension_to_load.html  telemetry.internal.browser.profile_types.html  telemetry.internal.browser.web_contents.html  telemetry.internal.forwarders.do_nothing_forwarder.html  telemetry.internal.html  telemetry.internal.image_processing._bitmap.html  telemetry.internal.image_processing.frame_generator.html  (+78 more)
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/examples/browser_tests/: process_tests.py  simple_numeric_test.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/: benchmark_run_unittest.py  benchmark_runner_unittest.py  record_wpr_unittest.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/android/: shared_android_state.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/core/: cros_interface.py  local_server.py  local_server_unittest.py  memory_cache_http_server.py  os_version.py  platform_unittest.py  tracing_controller.py  util.py  util_unittest.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/internal/: binary_dependencies.json
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/internal/actions/: action_runner.py  action_runner_unittest.py  drag.js  drag.py  drag_unittest.py  gesture_common.js  javascript_click.py  loop.py  mouse_click.py  page_action.py  page_action_unittest.py  play_unittest.py  repaint_continuously.py  scroll_to_element_unittest.py  swipe.py  wait.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/internal/app/: android_app.py  android_process.py  possible_app.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/internal/backends/: android_app_backend_unittest.py  android_browser_backend_settings_unittest.py  app_backend.py  browser_backend_unittest.py  codepen_credentials_backend_unittest.py  facebook_credentials_backend.py  form_based_credentials_backend_unittest_base.py  google_credentials_backend.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/page/: legacy_page_test.py  page_run_end_to_end_unittest.py  page_unittest.py  shared_page_state.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/story/: __init__.py  story_filter.py  story_set_unittest.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/testing/: browser_test_context.py  browser_test_runner.py  decorators_unittest.py  options_for_unittests.py  progress_reporter.py  run_browser_tests.py  serially_executed_browser_test_case.py  simple_mock.py  simple_mock_unittest.py  system_stub.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/timeline/: chrome_trace_category_filter_unittest.py  chrome_trace_config.py  chrome_trace_config_unittest.py  event.py  event_container.py  event_unittest.py  inspector_importer_unittest.py  sample.py  slice_unittest.py  thread_unittest.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/util/: color_histogram.py  command_line.py  image_util_unittest.py  matching.py  perf_tests_helper.py  process_statistic_timeline_data.py
DynamicAnalyzer/tools/adb/mac/systrace/catapult/telemetry/telemetry/value/: common_value_helpers_unittest.py  failure.py  histogram.py  histogram_util.py  improvement_direction.py  list_of_scalar_values.py  merge_values.py
(+4793 files in other folders)
