[tool.poetry]
name = "mobsf"
version = "4.5.0"
description = "Mobile Security Framework (MobSF) is an automated, all-in-one mobile application (Android/iOS/Windows) pen-testing, malware analysis and security assessment framework capable of performing static and dynamic analysis."
keywords = ["mobsf", "mobile security framework", "mobile security", "security tool", "static analysis", "dynamic analysis", "malware analysis"]
authors = ["Ajin Abraham <ajin@opensecurity.in>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/MobSF/Mobile-Security-Framework-MobSF"
documentation = "https://mobsf.github.io/docs/"
packages = [
    { include = "mobsf", format = ["sdist", "wheel"]},
    { include = "cyberspect", format = ["sdist", "wheel"]}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/MobSF/Mobile-Security-Framework-MobSF/issues"

[tool.poetry.scripts]
mobsf = "mobsf.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=3.1.5"
rsa = ">=4.7"
requests = ">=2.25.1"
bs4 = ">=0.0.1"
colorlog = ">=4.7.2"
macholib = ">=1.14"
whitenoise = ">=6.8.2"
waitress = {version = ">=3.0.1", markers = "sys_platform == 'win32'"}
gunicorn = {version = ">=20.0.4", markers = "sys_platform != 'win32'"}
psutil = ">=5.8.0"
shelljob = ">=0.6.2"
asn1crypto = ">=1.4.0"
distro = ">=1.5.0"
ip2location = "^8.10.4"
pdfkit = ">=0.6.1"
google-play-scraper = ">=0.1.2"
apkid = "^3.0.0"
frida = ">=17.0.0"
frida-tools = "^14.3.0"
tldextract = ">=5.1.3"
openstep-parser = ">=2.0.1"
svgutils = ">=0.3.4"
arpy = ">=2.3.0"
apksigtool = "^0.1.0"
tzdata = "^2023.3"
http-tools = ">=6.0.0"
libsast = "^3.1.6"
paramiko = "^3.3.1"
six = ">=1.16.0"
python3-saml = "^1.16.0"

psycopg2-binary = "^2.9.10"
lief = "^0.16.6"
packaging = ">=24.2"
django-ratelimit = "^4.1.0"
django-q2 = "^1.7.4"
defusedxml = "^0.7.1"
bleach = "^6.2.0"
bcrypt = "4.0.1" # Pinned to avoid warnings with mitmproxy 12
# Cyberspect specific dependencies begin
boto3 = ">=1.34.148"
PyJWT = ">=2.8.0"
siphash = ">=0.0.1"
django4-background-tasks = ">=1.2.10"
djangorestframework = ">=3.15.0"
django-brake = "^1.6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
tox = "^4.31.0"
autopep8 = "^2.3.2"
pydocstyle = "^6.3.0"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^25.11.29"
flake8-builtins = "^3.1.0"
flake8-colors = "^0.1.9"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.17.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-import-order = "^0.19.2"
flake8-logging-format = "^2024.24.12"
flake8-quotes = "^3.4.0"
flake8-self = "^0.2.2"
pep8-naming = "^0.15.1"
radon = "^6.0.1"
codespell = "^2.4.1"
# Cyberspect specific dependencies end

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
